--- a/src/releases/3.4.1
+++ b/src/releases/3.4.1
@@ -11,7 +11,7 @@ Downloads
 
 Background
 ==========
-Angband 3.4.1 was released on 20th October 2012 as a minor bugfix release to 3.4.0 (releases only a month earlier).
+Angband 3.4.1 was released on 20th October 2012 as a minor bugfix release to 3.4.0 (released only a month earlier).
 
 Changes
 =======
