--- a/changes.txt
+++ b/changes.txt
@@ -41,19 +41,26 @@ Bugs fixed
  * Clean up duplicate and conflicting monster flags (thanks Ben Semmler).  Fixes #1601, #1692.
  * Change description for deep descent from two levels down to five levels down.
  * Fix cavern redraw bug, update a lot of code to use cave->(width|height) instead of DUNGEON_(HGT|WID)  (fixes #1751).
-
-
-OS X:
- * Include Ben Semmler's excellent work on the Mac port:
-   - Term windows can now be resized.
-   - Add a command menu to get around issues with non-US keyboards. #880, #1460
-   - Create a safe install target for development versions. #506
-   - Change some makefile and Info.plist things to clean up version strings. #1701
-   - Make windows closeable based on subwindow flags. #1664
- * Fix for #1709: Use isMainWindow instead of isKeyWindow for detecting front-most window in main-cocoa, and don't try to change font for non-Angband windows. Also update the font selection panel when windows become main.
- * Fix for #1695: In the Cocoa port, Cmd-Q now does nothing when inkey_flag is false, e .g. when the inventory menu is up. This behavior is now consistent with the Windows port.
- * Finished the fix to #1669: remove call to displayIfNeeded from Cocoa TERM_XTRA_FRESH handler. (thanks to mtadd)
- * Further issues from #1678: corrected bounds for clickable region and added support for OPT(mouse_buttons).
+ * Fix original tiles trap detect image (it was a hydra before)
+ * Make the game handle neuter gender better.  Closes #1763.
+ * Move universal use in the roguelike keyset to 'X' to avoid conflict with running north east. (#1758)
+ * Univeral use command defaults now to inventory instead of equipment. (#1736)
+ * Make the subwindow inventory display responsive to its term size - hiding the weights and abbreviating item descriptions  * in small windows.  Closes #1735.
+ * Fix old bug there if a monster is targeted using 'free targeting' mode, use_old_target would never clear after it was dead. *  (#332)
+ * Ensure monster death messages to go last, so you don't get "it dies.  it moans in pain." type messages. (#1554)
+ * Clear overhead subwindow on level change when necessary. (#1495)
+ * Allow monsters to be placed on locations that have objects.
+ * Various grammar fixes (full stops, singular/plural agreement)
+ * Fix description for Rend Soul.
+ * In character dumps, don't include origin information for non-wearables and don't include obvious and basic flags.
+ * Fix typo that limited boulder damage.
+ * Light description and character dump fixes.  (#401, #403, #1681, #1325, #1681)
+ * Get rid of extra linebreaks in character dumps. (#1325)
+ * Stop mimics revealing themselves when running. (#1667)
+ * Adjust 'when drunk' to 'when quaffed' for pedants.  (#1635)
+ * Add back in sounds on monster deaths from spells.  (#1630)
+ * Stop the inventory menu overwriting item descriptions.  (#1725)
+ * Only show fail rates on items when requested if those items have fail rates.  (#1734)
 
 
 Gameplay changes
@@ -70,7 +77,7 @@ Gameplay changes
  * Make town spellbooks available earlier in the dungeon (at dlev1 instead of dlev5).
  * Change monster elemental attacks so that they do some part of their damage using elemental damage and some of it using physical damage. This means that the damage a monster attack gets calculated twice - once for if it was pure damage, one if it was elemental damage. Whichever of the two is higher is the amount of damage dealt.  This meant that immunity won't reduce damage ridiculously low.
  * Make Purifications and Healing a bit more of a find for Paladins by making CSW and CMW slightly better than the earlier versions instead of worse.  Closes #888.
- * Give the player a bonus to damage absorption for physical elemental attacks ( 085574b82d649)
+ * Give the player a bonus to damage absorption for physical elemental attacks (085574b82d649)
  * Some monster attacks no longer do physical damage (e.g. touch, spit, etc.) - they only do elemental damage. (3fc86a0f84db)
  * Remove birth_ai_smart (broken). Replace with birth_force_descend, which is like 'ironman lite' - you can only take down stairs. You can still recall but down stairs from the town take you to your deepest level + 1.
  * Make the damage monsters deal with each attack and their AC visible to the player after one attack/one hit.
@@ -115,7 +122,7 @@ User interface
  * Make inventory listings terser in the term window if there's not much room.  (Closes #121)
  * Make it so skills, hitdie and exp modifier when selecting a class on the birth screen are shown with racial adjustments, a la stat display. Fixes #1705 (thanks danial.santos).
  * Improved error message for no available new spells to gain. Thanks to hboetes for pointing it out.
- * Redesign character sheet, changing the fighting and shooting skills scores into numbers comparable to to-hit scores, and rearranging all combat info to be together in the centre of the screen. Also improve spacing.
+ * Redesign character sheet, changing the fighting and shooting skills scores into numbers comparable to to-hit scores, and rearranging all combat info to be together in the centre of the screen. Also improve spacing.  Fix height/weight display to be in sensible units.
  * Rename =Delving to =Digging for thematic consistency
  * Add option to show damage player does to monster in melee.
  * Add a prompt if you try to deactivate WoR, just in case.
@@ -125,10 +132,27 @@ User interface
  * Include Dubtrain's sound set instead of the one Angband perviously had (encoded as high-quality VBR MP3).
  * Add platform-native save dialogue boxes for character dumps and other things which prompt for a file to save to on OS X (both Carbon and Cocoa). Add note telling user where character dump is going to be saved to in text mode.
  * On UNIX systems, there is a -l argument which shows you which savefiles you can use and what they are (e.g. savefile 'Nomad', L30 High-Elf Warrior on dungoen level 30). This will be ported to other frontends at some point.
- * (OS X) Add mouseclick support for the Cocoa frontend.
  * (Windows) Add some keyboard shortcuts to the Windows port for 'new game' and 'open game'.  Closes #887.
  * (Windows) Make the windows port save the game before closing on shutdown.  Closes #296.
  * (Curses) Allow specification of number of terminals in the curses port.
+ * Combine first two pages of options together; rearrange vaguely thematically.  Add autoinscription shortcut from main options screen.
+ * Stop allowing the user to save options to a pref file, to avoid confusion.  (#1127)
+ * Update inscription documentation.
+
+ OS X:
+ * Include Ben Semmler's excellent work on the Mac port:
+   - Term windows can now be resized.
+   - Add a command menu to get around issues with non-US keyboards. #880, #1460
+   - Create a safe install target for development versions. #506
+   - Change some makefile and Info.plist things to clean up version strings. #1701
+   - Make windows closeable based on subwindow flags. #1664
+ * Fix for #1709: Use isMainWindow instead of isKeyWindow for detecting front-most window in main-cocoa, and don't try to change font for non-Angband windows. Also update the font selection panel when windows become main.
+ * Fix for #1695: In the Cocoa port, Cmd-Q now does nothing when inkey_flag is false, e .g. when the inventory menu is up. This behavior is now consistent with the Windows port.
+ * Finished the fix to #1669: remove call to displayIfNeeded from Cocoa TERM_XTRA_FRESH handler. (thanks to mtadd)
+ * Further issues from #1678: corrected bounds for clickable region and added support for OPT(mouse_buttons).
+ * Add right click and click plus modifier support.
+ * Add mouseclick support for the Cocoa frontend.
+ * Add support for animate_flicker option.
 
 
 
@@ -173,6 +197,7 @@ Coding changes
  * The various CAVE_ constants (for cave->info[][]) have been named more sensibly, and in some places stopped being used
  * Replace file_seek() with file_skip() as it was unused and skipping is more useful.
  * The buildsystem can now build and install the HTML & PDF documentation. The OS X dist target and scripts/pkg_win will also package the manual if it exists. 'make dist' in the angband directory will now try to make the manual before packaging up the game and supercedes scripts/pkg_src.
+ * Try to move things out of defines.h into more appropriate places, and likewise with util.c
 
 
 Documentation changes
