--- a/lib/file/news.txt
+++ b/lib/file/news.txt
@@ -6,7 +6,7 @@
                  /_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_|
                                 |___/
 
-                                Version 3.0.9a
+                                Version 3.0.9b
                        Bug reports to <bugs@rephial.org>
 
    For resources and links to places you can talk about the game, please see:
