--- a/lib/file/news.txt
+++ b/lib/file/news.txt
@@ -1,23 +1,21 @@
+{mud}                                       ^                        {/}
+{mud}                                      ^^^                       {/}
+{mud}                ^                    ^^^^^                   ^  {/}
+{mud}               ^^^                  ^^^^^^^                 ^^^ {/}
+{mud}              ^^^^^                ^^^^^^^^^               ^^^^^{/}
+{mud}             ^^^^  {/}{red}_{/}{mud}              ^ {/}{red}_{/}{mud}  ^^^^^^             {/}{red}_{/}{mud}  ^^^^{/}
+{mud}            ^^^^ {/}{red} / \   _ __   __ _| |__   __ _ _ __   __| | {/}{mud}^^^^^   {/}
+{mud}           ^^^^ {/}{red} / _ \ | '_ \ / _` | '_ \ / _` | '_ \ / _` | {/}{mud}^^^^^^  {/}
+{mud}          ^^^^  {/}{red}/ ___ \| | | | (_| | |_) | (_| | | | | (_| | {/}{mud}^^^^^^^ {/}
+{mud}         ^^^^  {/}{red}/_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_| {/}{mud}^^^^^^^^{/}
+{mud}        ^^^^^                {/}{red} |___/{/}  $VERSION
+{mud}       ^^^^^^^^^^^^^^^^^^                     ^^^^  ^^^^^^^^^^^^^^^^^^^ {/}
+{red}         "When the world is old and the Powers grow weary, then Morgoth,{/}
+{red}          seeing that the guard sleepeth, shall come back through the   {/}
+{red}          Door of Night out of the Timeless Void.  Then shall the Last  {/}
+{red}          Battle be gathered..."                                        {/}
 
-       {light blue}            _                _                     _  {/}
-       {light blue}           / \   _ __   __ _| |__   __ _ _ __   __| | {/}
-       {light blue}          / _ \ | '_ \ / _` | '_ \ / _` | '_ \ / _` | {/}
-       {light blue}         / ___ \| | | | (_| | |_) | (_| | | | | (_| | {/}
-       {light blue}        /_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_| {/}$VERSION
-       {light blue}                       |___/  a variant of Moria      {/}
-         
-                 {light slate}        Website: http://rephial.org/        {/}
-                 {light slate}    Forums: http://angband.oook.cz/forum/   {/}
+{light slate}                         Website: http://rephial.org/           {/}
+{light slate}                     Forums: http://angband.oook.cz/forum/      {/}
               
                            For help press '?' in-game
-
- 
-                        {slate}############# {/}
-                        {slate}.....{/}{light umber}+{/}{slate}.....{/}{red}!{/}{slate}# {/}
-                        {slate}######......# {/}    {slate}#.#{/}
-                        {slate}     ######{/}{light umber}'{/}{slate}#     #.#{/}
-                        {slate}          #.# {/}    {slate}#.#{/}
-                        {slate}          #.##{/}{slate }#{/}#{yellow}{/}#{slate}##.#####{/}###{slate}##{/}
-                        {slate}          #...{/}{yellow}.{/}@{yellow}.{/}{slate}........{/}.{blue}p{/}.{slate}..{/}
-                        {slate}          ####{/}{slate }#{/}#{yellow}{/}#{slate}########{/}###{slate}##{/}
-
