Make splashscreen more readable

--- a/lib/file/news.txt
+++ b/lib/file/news.txt
@@ -11,10 +11,10 @@
 {mud}         ^^^^  {/}{red}/_/   \_\_| |_|\__, |_.__/ \__,_|_| |_|\__,_| {/}{mud}^^^^^^^^{/}
 {mud}        ^^^^^                {/}{red} |___/{/}  $VERSION
 {mud}       ^^^^^^^^^^^^^^^^^^                     ^^^^  ^^^^^^^^^^^^^^^^^^^ {/}
-{red}         "When the world is old and the Powers grow weary, then Morgoth,{/}
-{red}          seeing that the guard sleepeth, shall come back through the   {/}
-{red}          Door of Night out of the Timeless Void.  Then shall the Last  {/}
-{red}          Battle be gathered..."                                        {/}
+{light slate}         "When the world is old and the Powers grow weary, then Morgoth,{/}
+{light slate}          seeing that the guard sleepeth, shall come back through the   {/}
+{light slate}          Door of Night out of the Timeless Void.  Then shall the Last  {/}
+{light slate}          Battle be gathered..."                                        {/}
 
 {light slate}                         Website: http://rephial.org/           {/}
 {light slate}                     Forums: http://angband.oook.cz/forum/      {/}
