--- a/changes.txt
+++ b/changes.txt
@@ -1,9 +1,32 @@
-Angband 3.5.0
+Angband 3.5.1
 =============
 
-Welcome to the changelog for Angband 3.5. This file tracks the changes made since 3.4.0. References are to tickets at tracrephial.org, or (if no ticket exists) to git commit IDs.
+Welcome to the changelog for Angband 3.5. This file tracks the changes made since 3.4.0. References are to tickets at trac.rephial.org, or (if no ticket exists) to git commit IDs.
 
 Please note that we don't guarantee that living characters will move gracefully between versions - it might work or it might not!  Ideally, you should finish off your character in 3.4.1 before moving over.
+
+Changes in 3.5.1
+----------------
+* Allow stores to be given items for recharging in no_selling (thanks PowerWrym)
+* Fix crash bug with non-ASCII characters in monster + object lists (#1811)
+* Fix a bug introduced with monster lights that makes monsters stupider
+* Display level feelings in the status bar (thanks LuthienCeleste)
+* Fix player history log turncount bug (#1815)
+* Fix bugs where mimics could sometimes be hasted without being woken up (#1821)
+* Fix the curses port ascii walls option & wall lighting bug (#1813)
+* Fix bug where pressing 'e' with no equipment would bring up inventory (#1824)
+* Update help files and improve some in-game explanatory text.
+* Remove occasional double object feelings
+* Fix bug where down stairs could occur on quest levels without killing the boss (#1802)
+* Fix some memory leaks (thanks noz)
+* Fix bug where identifying items in the quiver would say they were on the ground (#1820)
+* Fix bug where randarts could get the remove curse activation
+* Fix bug where artifacts sometimes weren't located
+* Fix bug where sometimes identifying objects would produce strange effects when selecting later objects
+* Fix bug where hitting monsters with missile weapons at maximum range would damage them twice (thanks shadowsun)
+* Fix Windows 8 compilation & Windows DLL issue
+* Fix build problems with HTML and PDF manual generation (#1810, #1831)
+* Fix some unit tests
 
 Bugs fixed
 ----------
