--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,39 @@
 Welcome to the changelog for Angband 4.0. This file tracks the changes made since 3.5.1.
 
+Angband 4.0.5
+=============
+
+More bugfixes, the last of the 4.0.x series.
+
+Changes
+-------
+ - Randart diggers always have a digging bonus
+ - Some improvements to town generation
+ - Improvements to probing and monster lore
+ - Improvements to OS X port, including making Command-n bring up window n
+ - Improvements to object and monster lists
+ - Make the store names uniform
+
+Bugfixes
+--------
+ - Stop properties of examined items from affecting the real player state
+ - Make the slay cache work
+ - Prevent attempting to buy when the pack is full
+ - Fix bug which allowed repeating a purchase after leaving a store
+ - Make sure chests are ignored correctly
+ - Fix some message issues
+ - Fix some monster friends
+ - Make Windows sound work properly
+ - Remove flicker in center_player option
+ - Remove duplicate labels in death info
+ - Remove help about bashing and jamming doors
+ - Code improvements to directory paths
+ - Fix bug where two players temporarily appeared on panel change while running
+ - Fix subwindow map drawing
+ - Plug some memory leaks
+ - Grammatical correction to tombstone
+ - Stop monster/player/object tiles from disappearing when targeting
+
 Angband 4.0.4
 =============
 
